moved common functions into separate file

--- a/hw0/Makefile
+++ b/hw0/Makefile
@@ -1,5 +1,14 @@
-mapper: mapper.c	
-	gcc mapper.c -o mapper
+CC = gcc
+CFLAGS = -Wall
+DEPS = common.h
+A_OBJ = mapper.o common.o
+#B_OBJ = reducer.o common.o
 
-# reducer: reducer.c
-# 	gcc reducer.c -o reducer
+%.o: %.c $(DEPS)
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+mapper: $(A_OBJ)
+	gcc $(CFLAGS) -o $@ $^
+
+#reducer: $(B_OBJ)
+#        gcc $(CFLAGS) -o $@ $^
