map data structure for reducer application

--- a/hw0/Makefile
+++ b/hw0/Makefile
@@ -1,14 +1,16 @@
 CC = gcc
 CFLAGS = -Wall
-DEPS = common.h
+DEPS = dictionary.h common.h
 A_OBJ = mapper.o common.o
-#B_OBJ = reducer.o common.o
+B_OBJ = reducer.o dictionary.o common.o
 
 %.o: %.c $(DEPS)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
+all: mapper reducer
+
 mapper: $(A_OBJ)
 	gcc $(CFLAGS) -o $@ $^
 
-#reducer: $(B_OBJ)
-#        gcc $(CFLAGS) -o $@ $^
+reducer: $(B_OBJ)
+	gcc $(CFLAGS) -o $@ $^
