--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall
 DEPS = dictionary.h common.h
 A_OBJ = mapper.o common.o
 B_OBJ = reducer.o dictionary.o common.o
-C_OBJ = combiner.o
+C_OBJ = combiner.o common.o
 
 %.o: %.c $(DEPS)
 	$(CC) $(CFLAGS) -c -o $@ $<
