mapper writes to channel buffers + readable

--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall
-DEPS = dictionary.h mapper.h reducer.h common.h
-A_OBJ = combiner.o mapper.o dictionary.o reducer.o common.o
+DEPS = channel.h dictionary.h mapper.h reducer.h common.h
+A_OBJ = combiner.o channel.o mapper.o dictionary.o reducer.o common.o
 
 %.o: %.c $(DEPS)
 	$(CC) $(CFLAGS) -c -o $@ $<
