--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -1,6 +1,5 @@
-CC = gcc
 CFLAGS = -Wall
 A_OBJ = combiner.c
 	
 combiner: $(A_OBJ)
-	gcc -pthread $(CFLAGS) -o $@ $^
+	gcc -g -pthread $(CFLAGS) -o $@ $^
