--- a/hw5/Makefile
+++ b/hw5/Makefile
@@ -1,4 +1,3 @@
-
 # if KERNELRELEASE is not defined, we've been called directly from the command line.
 # Invoke the kernel build system.
 ifeq (${KERNELRELEASE},)
@@ -13,7 +12,7 @@ driver:
 
 app: 
 	@echo "========= building userapp ========="
-	gcc -o userapp userapp.c
+	gcc -std=c99 -o userapp userapp.c
 
 .PHONY : clean
 clean:
