processes and threads initialized

--- a/hw7/Makefile
+++ b/hw7/Makefile
@@ -1,14 +1,4 @@
-## if KERNELRELEASE is not defined, we've been called directly from the command line.
-## Invoke the kernel build system.
-ifeq (${KERNELRELEASE},)
-	KERNEL_SOURCE := /usr/src/linux-headers-$(shell uname -r)
-	PWD := $(shell pwd)
-
-all: driver clean
-
-driver:
-	@echo "========= building driver =========="
-	${MAKE} -C ${KERNEL_SOURCE} M=${PWD} modules
+all: userapp clean
 
 userapp: 
 	@echo "========= building userapp ========="
@@ -18,11 +8,3 @@ userapp:
 clean:
 	@echo "============= cleaning ============="
 	$(shell find . -type f -iregex '.*\.\(tmp\|o\|mod\|cmd\|symvers\|order\|mod.*\)' -exec rm -f {} \;)
-
-# Otherwise KERNELRELEASE is defined; we've been invoked from the
-# kernel build system and can use its language.
-else
-	obj-m += usbkbd.o
-	#obj-m += mycdrv.o
-	#mycdrv-y := char_driver.o
-endif
